--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -5,11 +5,11 @@ image: ubuntu
 version: '{build}'
 
 cache:
-- go1.12.1.deb -> .appveyor.yml
+- go1.12.1.deb
 
 install:
 - 'if [[ $APPVEYOR_REPO_TAG == "true" ]]; then appveyor UpdateBuild -Version "$(git describe --tags --always)"; else appveyor UpdateBuild -Version "$(git rev-parse --short HEAD)"; fi'
-- wget -O go1.12.1.deb https://deb.geek1011.net/pool/main/g/go/go_1.12.1-godeb1_amd64.deb
+- wget --no-clobber -O go1.12.1.deb https://deb.geek1011.net/pool/main/g/go/go_1.12.1-godeb1_amd64.deb
 - sudo dpkg -i go1.12.1.deb
 - go mod download
 
