--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -9,7 +9,7 @@ cache:
 
 install:
 - 'if [[ $APPVEYOR_REPO_TAG == "true" ]]; then appveyor UpdateBuild -Version "$(git describe --tags --always)"; else appveyor UpdateBuild -Version "$(git rev-parse --short HEAD)"; fi'
-- wget --no-clobber -O go1.12.1.deb https://deb.geek1011.net/pool/main/g/go/go_1.12.1-godeb1_amd64.deb
+- 'wget --no-clobber -O go1.12.1.deb https://deb.geek1011.net/pool/main/g/go/go_1.12.1-godeb1_amd64.deb || true'
 - sudo dpkg -i go1.12.1.deb
 - go mod download
 
